--- a/warehouse/src/Components/banner.css
+++ b/warehouse/src/Components/banner.css
@@ -1,8 +1,7 @@
 .main {
-padding: 20px 0 ;
+	padding: 20px 0;
 }
-  .hero {
-	  
+.hero {
 	width: 100%;
 	height: 400px;
 	display: flex;
@@ -11,25 +10,37 @@ padding: 20px 0 ;
 	justify-content: center;
 	position: relative;
 	overflow: hidden;
-  }.hero img{
-	  background-image: cover;
-  }
-  
-  .text-wrapper {
+}
+.hero img {
+	background-image: cover;
+}
+
+.text-wrapper {
 	text-align: center;
-  }
-  
-  .headline {
-	font-size: 40px;
+}
+
+.headline {
+	font-size: 50px;
 	color: white;
 	font-weight: 100;
 	line-height: 0.5;
 	font-weight: bold;
 	font-family: Montserrat;
-  }
-  
-  
-  .parallax {
+}
+.headline2 {
+	font-size: 50px;
+	color: white;
+	font-weight: 100;
+	line-height: 0.5;
+	font-weight: bold;
+	font-family: Montserrat;
+	padding-top: 30px;
+}
+.para {
+	color: white;
+	padding-top: 30px;
+}
+.parallax {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -37,9 +48,8 @@ padding: 20px 0 ;
 	height: 100%;
 	object-fit: cover;
 	z-index: -1;
-  }
-  
-  .overflow {
+}
+
+.overflow {
 	height: 200vh;
-  }
-  
+}
